--- a/css/Image_Style.css
+++ b/css/Image_Style.css
@@ -232,14 +232,14 @@ body {
     background-color: #4E4039;
     align-items: center;
     justify-content: center;
-    padding: 10%;
+    padding: 100px;
 }
 
 .photos img{
-    
-    padding: 20px;
     max-width: auto;
     max-height: 400px;
+    margin: 20px;
+    border-radius: 10%;
 }
 
 .photos img:hover {
