--- a/css/Image_Style.css
+++ b/css/Image_Style.css
@@ -19,6 +19,10 @@ body {
     background-color: var(--warna-cream); 
     color: var(--warna-coklat-gelap);     
     line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
 }
 
 .container {
@@ -92,6 +96,7 @@ footer {
     color: var(--warna-cream);
     text-align: center;
     padding: 30px 0;
+    margin-top: auto;
 }
 
 
@@ -192,7 +197,7 @@ footer {
 
 .intro #garis1 {
     border-bottom: 2px solid black;
-    width: 4%;
+    width: 80px;
 }
 
 .gallery-list {
@@ -204,6 +209,7 @@ footer {
     flex-shrink: 0;
     flex-grow: 0;
     flex-basis: 200px;
+    flex-wrap: wrap;
 
 }
 
@@ -238,7 +244,6 @@ footer {
     background-color: #4E4039;
     align-items: center;
     justify-content: center;
-    padding: 100px;
 }
 
 .photos img{
