--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
     background-color: var(--warna-cream);
     color: var(--warna-coklat-gelap);
     line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
 }
 
 .container {
@@ -367,7 +371,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     width: 2px;
-    height: 40px;
+    height: 60px;
     background-color: var(--warna-coklat-sedang);
 }
 
@@ -392,14 +396,14 @@ body {
     left: 50%;
     transform: translateX(-50%);
     width: 2px;
-    height: 50px;
+    height: 40px;
     background-color: var(--warna-coklat-sedang);
 }
 
 
 .level-1 .card-item::after {
-    height: 20px;
-    bottom: -20px;
+    height: 45px;
+    bottom: -45px;
     z-index: 10;
 }
 
@@ -519,7 +523,8 @@ footer {
     color: var(--warna-cream);
     text-align: center;
     padding: 30px 0;
-    margin-top: 40px;
+    margin-top: auto;
+
 }
 
 #garis2 {
