--- a/css/Image_Style.css
+++ b/css/Image_Style.css
@@ -23,6 +23,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
+    flex-wrap: wrap;
 }
 
 .container {
@@ -43,6 +44,7 @@ body {
     display: flex;
     justify-content: space-between; 
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .logo-container { 
@@ -223,6 +225,7 @@ footer {
 
 .block:hover {
     opacity: 90%;
+    cursor: pointer;
 }
 
 .block img:hover {
@@ -255,4 +258,23 @@ footer {
 
 .photos img:hover {
     max-height: 410px;
+}
+
+.scrollUp {
+    background-image: url("https://cdn-icons-png.flaticon.com/512/4196/4196777.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+    margin: 100px;
+    bottom: 0;
+    right: 0;
+    opacity: 20%;
+}
+
+.scrollUp:hover {
+    opacity: 100%;
+    cursor: pointer;
 }
